# libinput-rs

./: Cargo.toml  PKGBUILD  README.md  build-shared.sh  build.rs  build_package.sh  libinput-elan-reset.service  libinput-rs-1.0.0-1-x86_64.pkg.tar.zst  libinput-rs.spec  libinput.map
.copr/: Makefile
.github/workflows/: ci.yml
forge/: libinput-rs.forge.toml  libinput-rs.service
src/: backend.rs  config.rs  device.rs  event_loop.rs  ffi_types.rs  lib.rs  main.rs  virtual_device.rs
