[package]
name = "libinput-rs"
version = "0.1.1"
edition = "2021"
description = "Companion Linux input preprocessor daemon (evdev grab + uinput); works alongside libinput"
license = "MIT"
repository = "https://github.com/SisyphusAeolides/libinput-rs"

[dependencies]
evdev = "0.13"
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }
nix = { version = "0.29", features = ["ioctl", "fs", "inotify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
